# FIFA-2026-World-Cup-Prediction

./: .gitignore  README.md  pyproject.toml
archive/: test.csv  train.csv
archive-10/player_injuries/: player_injuries.csv
archive-10/player_latest_market_value/: player_latest_market_value.csv
archive-10/player_national_performances/: player_national_performances.csv
archive-10/player_teammates_played_with/: player_teammates_played_with.csv
archive-10/team_children/: team_children.csv
archive-10/team_competitions_seasons/: team_competitions_seasons.csv
archive-10/team_details/: team_details.csv
archive-11/: all_player_profiles.csv  all_player_stats.csv
archive-3/: elo_ratings_wc2026.csv
archive-4/: wc_2026_fixtures.csv  wc_2026_teams.csv  wc_all_editions.csv  wc_all_matches.csv  wc_top_scorers.csv
archive-5/: former_names.csv  goalscorers.csv  results.csv  shootouts.csv
archive-6/: all_matches.csv  countries_names.csv
archive-7/: fifa_ranking-2024-04-04.csv  fifa_ranking-2024-06-20.csv
archive-8/: players_data-2025_2026.csv  players_data_light-2025_2026.csv
archive-9/: EAFC26-Men.csv  EAFC26-Women.csv  EAFC26.csv
dashboard/: app.js  data.json  fixtures-fallback.json  generate_data.py  index.html  styles.css  sync_fixtures.py
src/fifa26/: __init__.py  cli.py  features.py  simulation.py  squads.py  training.py
tests/: test_elo.py  test_features.py  test_simulation.py  test_squads.py
