[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fifa26"
version = "0.2.0"
description = "Data-driven 2026 FIFA World Cup prediction pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "certifi>=2025.0",
  "numpy>=2.0",
  "pandas>=2.2",
  "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
fifa26 = "fifa26.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
